# qtchess

./: .gitignore  CMakeLists.txt  ChessPiece.qml  ChessboardLabels.qml  GameState.qml  Main.qml  README.md  TurnDisplay.qml  main.cpp
